--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -33,10 +33,10 @@
               <div class="alert alert-danger" *ngIf="showErrorMessage" [ngStyle]="{'color':'red'}">
                 {{errorMsg}}
               </div>
-                <form class="form-signin">
-                  <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail" [(ngModel)]="email" [ngModelOptions]="{standalone: true}">
+                <form #f= "ngForm" class="form-signin">
+                  <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" required>
                       <!-- Password -->
-                      <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}">
+                      <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}" required>
                   <div class="custom-control custom-checkbox mb-3">
                     <input type="checkbox" class="custom-control-input" id="customCheck1">
                     <label class="custom-control-label" for="customCheck1">Remember password</label>
