--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,19 +1,3 @@
-<!-- <p>
-  dashboard works!
-</p> -->
-
-<head>
-        <script>
-                
-                        $( function() {
-                    $( "#datepicker" ).datepicker();
-                    $( "#datepicker" ).datepicker("show");
-                  } );
-                
-                
-                    </script>
-</head>
-
 <div style="height: 40px; font-family: -apple-system, BlinkMacSystemFont, 
 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
     <h1 style="padding-left: 20px; color: rgb(22, 24, 18)">Dashboard</h1>
@@ -60,7 +44,6 @@ background-color:white;" data-toggle="modal">
             <!-- Body -->
             <div class="modal-body text-center mb-1">
                     <p>Date: <input type="text" id="datepicker"></p>
-                    <p-calendar [(ngModel)]="value"></p-calendar>
                 <!-- <form>
                     <div class="form-group">
 
@@ -74,8 +57,10 @@ background-color:white;" data-toggle="modal">
                             <!-- <input type="date" style=" width: 100%;"  class="form-control"  name="Date"></div> -->
 
                             <div class='input-group date'>
-                                <input type="text" class="form-control datepicker" />
-
+                                <input type="text"
+                                placeholder="Datepicker"
+                                class="form-control"
+                                bsDatepicker>
                             </div>
                         </div>
                         <div class="input-container">
