--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -43,59 +43,47 @@ background-color:white;" data-toggle="modal">
             </div>
             <!-- Body -->
             <div class="modal-body text-center mb-1">
-                    <p>Date: <input type="text" id="datepicker"></p>
-                <!-- <form>
-                    <div class="form-group">
-
+                <div class="col-sm-8 col-md-8 col-lg-8 mx-auto">
+                    <!-- DatePicker -->
+                    <div class="input-container">
+                        <i class="fa fa-calendar icon" aria-hidden="true"></i>
+                        <input type="text" placeholder="Workout Date" class="form-control" bsDatepicker>
                     </div>
-                </form> -->
-                
-                
-                <div class="mod">
-                    <div class="">
-                        <div class="input-container">
-                            <!-- <input type="date" style=" width: 100%;"  class="form-control"  name="Date"></div> -->
-
-                            <div class='input-group date'>
-                                <input type="text"
-                                placeholder="Datepicker"
-                                class="form-control"
-                                bsDatepicker>
-                            </div>
-                        </div>
-                        <div class="input-container">
-                            <i class="fa fa-clock icon " aria-hidden="true"></i>
-                            <input class="form-control text1" type="text" placeholder="Workout Time" name="Weight">
-                        </div>
+                    <!-- WorkoutTime -->
+                    <div class="input-container">
+                        <i class="fa fa-clock icon " aria-hidden="true"></i>
+                        <input type="text" placeholder="Workout Time" class="form-control" name="Weight">
                     </div>
-
-                    <div class="col-sm-6 col-md-6 col-lg-6 mx-auto">
-                        <div class="input-container">
-                            <select style=" width: 100%" class="form-control input-lg">
-                                <option value="" selected disabled>Workout Type</option>
-                                <option value="">Running</option>
-                                <option value="">Walking</option>
-                                <option value="">Legs</option>
-                            </select>
-                        </div>
-
-                        <div class="input-container" style="margin-bottom: 8px;">
-
-                            <select style=" width: 100%" class="form-control input-lg">
-                                <option value="" selected disabled>Food</option>
-                                <option value="">Healthy</option>
-                                <option value="">UnHealthy</option>
-
-                            </select>
-
-                        </div>
+                    <!-- WorkoutType -->
+                    <div class="input-container">
+                        <select style=" width: 100%" class="form-control input-lg">
+                            <option value="" selected disabled>Workout Type</option>
+                            <option value="">Running</option>
+                            <option value="">Walking</option>
+                            <option value="">Legs</option>
+                            <option value="">Chest</option>
+                            <option value="">Biceps</option>
+                            <option value="">Triceps</option>
+                            <option value="">Back</option>
+                            <option value="">Abs</option>
+                            <option value="">Shoulders</option>
+                            <option value="">Cardio</option>
+                            <option value="">HIIT</option>
+                        </select>
                     </div>
-
+                    <!-- Food Type -->
+                    <div class="input-container">
+                        <select style=" width: 100%" class="form-control input-lg">
+                            <option value="" selected disabled>Food</option>
+                            <option value="">Healthy</option>
+                            <option value="">UnHealthy</option>
+                        </select>
+                    </div>
                 </div>
-                <div class="modal-footer" style="margin-bottom:-20px;">
-                    <button type="button" class="btn btn-primary btn-sm btn-save ">Save Activity</button>
-                </div>
+            </div>
+            <div class="modal-footer text-center mt-4">
+                <button type="button" class="btn btn-primary btn-group-lg btn-save ">Save Activity</button>
             </div>
         </div>
     </div>
-    
+</div>
