--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -33,57 +33,59 @@ background-color:white;" data-toggle="modal">
     <i class="fa fa-plus fa-3x add"></i>
 </a>
 
-<!-- Modal HTML -->
-<div id="myModal" class="modal fade" role="dialog">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <!-- Header -->
-            <div class="modal-header">
-                <img class="rounded-circle img-fluid center-block" alt="avatar" style="align-items: center;" alt="100*100" src="../assets/Profile.png">
-            </div>
-            <!-- Body -->
-            <div class="modal-body text-center mb-1">
-                <div class="col-sm-8 col-md-8 col-lg-8 mx-auto">
-                    <!-- DatePicker -->
-                    <div class="input-container">
-                        <i class="fa fa-calendar icon" aria-hidden="true"></i>
-                        <input type="text" placeholder="Workout Date" class="form-control" bsDatepicker>
-                    </div>
-                    <!-- WorkoutTime -->
-                    <div class="input-container">
-                        <i class="fa fa-clock icon " aria-hidden="true"></i>
-                        <input type="text" placeholder="Workout Time" class="form-control" name="Weight">
-                    </div>
-                    <!-- WorkoutType -->
-                    <div class="input-container">
-                        <select style=" width: 100%" class="form-control input-lg">
-                            <option value="" selected disabled>Workout Type</option>
-                            <option value="">Running</option>
-                            <option value="">Walking</option>
-                            <option value="">Legs</option>
-                            <option value="">Chest</option>
-                            <option value="">Biceps</option>
-                            <option value="">Triceps</option>
-                            <option value="">Back</option>
-                            <option value="">Abs</option>
-                            <option value="">Shoulders</option>
-                            <option value="">Cardio</option>
-                            <option value="">HIIT</option>
-                        </select>
-                    </div>
-                    <!-- Food Type -->
-                    <div class="input-container">
-                        <select style=" width: 100%" class="form-control input-lg">
-                            <option value="" selected disabled>Food</option>
-                            <option value="">Healthy</option>
-                            <option value="">UnHealthy</option>
-                        </select>
+<form [formGroup]="addActivityForm" (ngSubmit)="addActivity()">
+    <!-- Modal HTML -->
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <!-- Header -->
+                <div class="modal-header">
+                    <img class="rounded-circle img-fluid center-block" alt="avatar" style="align-items: center;" alt="100*100" src="../assets/Profile.png">
+                </div>
+                <!-- Body -->
+                <div class="modal-body text-center mb-1">
+                    <div class="col-sm-8 col-md-8 col-lg-8 mx-auto">
+                        <!-- DatePicker -->
+                        <div class="input-container">
+                            <i class="fa fa-calendar icon" aria-hidden="true"></i>
+                            <input type="text" id="workoutDate" formControlName="workoutDate" placeholder="Workout Date" class="form-control" bsDatepicker>
+                        </div>
+                        <!-- WorkoutTime -->
+                        <div class="input-container">
+                            <i class="fa fa-clock icon " aria-hidden="true"></i>
+                            <input type="text" id="workoutTime" formControlName="workoutTime" placeholder="Workout Time" class="form-control" name="Weight">
+                        </div>
+                        <!-- WorkoutType -->
+                        <div class="input-container">
+                            <select style=" width: 100%" class="form-control input-lg">
+                                <option value="" selected disabled>Workout Type</option>
+                                <option value="">Running</option>
+                                <option value="">Walking</option>
+                                <option value="">Legs</option>
+                                <option value="">Chest</option>
+                                <option value="">Biceps</option>
+                                <option value="">Triceps</option>
+                                <option value="">Back</option>
+                                <option value="">Abs</option>
+                                <option value="">Shoulders</option>
+                                <option value="">Cardio</option>
+                                <option value="">HIIT</option>
+                            </select>
+                        </div>
+                        <!-- Food Type -->
+                        <div class="input-container">
+                            <select style=" width: 100%" class="form-control input-lg">
+                                <option value="" selected disabled>Food</option>
+                                <option value="">Healthy</option>
+                                <option value="">UnHealthy</option>
+                            </select>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="modal-footer text-center mt-4">
-                <button type="button" class="btn btn-primary btn-group-lg btn-save ">Save Activity</button>
+                <div class="modal-footer text-center mt-4">
+                    <button type="submit" class="btn btn-primary btn-group-lg btn-save ">Save Activity</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</form>
