--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -74,7 +74,7 @@ background-color:white;" data-toggle="modal">
                     </div>
                 </div>
                 <div class="modal-footer text-center mt-4">
-                    <button type="button" class="btn btn-primary btn-group-lg btn-save" (click)='addActivity()' data-dismiss="myModal">Save Activity</button>
+                    <button type="button" class="btn btn-primary btn-group-lg btn-save" (click)='addActivity()' data-dismiss="modal">Save Activity</button>
                 </div>
             </div>
         </div>
