--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,24 +1,8 @@
 
-<!-- <div style="text-align: center"> 
-<h1 style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
- font-size: 30px; font-weight: bolder">Health Training App </h1>
-</div>
-<div class="mod-div">
-<form>
-  <input type="text" placeholder="Enter your Email or Username *" 
-  class="mod-input" [(ngModel)]="email" [ngModelOptions]="{standalone: true}">
-  <br>
-  <input type="text" placeholder="Enter your Password *" 
-  class="mod-input" [(ngModel)]="password" [ngModelOptions]="{standalone: true}">
-  <br>
-  <button class="mod-button" (click)="login()" >Login</button>
-</form>
-</div> -->
-
 <div>
   <div class="row">
     <div class="col-sm-9">
-        <img class="img-fluid" style="min-height: 100%"
+        <img class="img-fluid" style="height: 100%"
          src="../assets/blueberries-heart-health.jpg">
          <div style="top: 28px; left: 50px; position: absolute">
            <h1 class="display-4" style="color: aliceblue;"> Health </h1>
