creating new angular dashboard

--- a/src/styles.css
+++ b/src/styles.css
@@ -50,3 +50,5 @@ hr {
     height: 4px; 
     background-color: darkolivegreen
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
