--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,7 +18,7 @@
                 {{errorMsg}}
               </div>
                 <form #f= "ngForm" class="form-signin">
-                  <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" required>
+                  <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="Username or E-mail" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" required>
                       <!-- Password -->
                       <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}" required>
                   <div class="custom-control custom-checkbox mb-3">
