--- a/src/app/my-dashboard/week-data/week-data.component.html
+++ b/src/app/my-dashboard/week-data/week-data.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="chart">
-  <!-- <canvas id="canvass">{{chart}}</canvas> -->
-  <canvas #lineChart>{{ chart }}</canvas>
-</div>
+<p>
+    Here i am
+</p>
+<div #chart id="chart" item-width="200" item-height="200"></div>
