--- a/src/app/my-dashboard/my-dashboard.component.html
+++ b/src/app/my-dashboard/my-dashboard.component.html
@@ -20,12 +20,20 @@
           </mat-card-header>
           <mat-card-content class="dashboard-card-content">
             <div>Card Content Here</div>
-            <!-- <app-week-data [data]="data | async" ></app-week-data> -->
           </mat-card-content>
         </mat-card>
       </mat-grid-tile>
     </mat-grid-list>
+    <div style="display: flex;">
+      <div class="chart-div-left" id="left-bar-chart">
+        <h1>Bar Charts</h1>
+        <app-week-data [data]="data | async" ></app-week-data>
+      </div>
+      <div class="charrt-div-normal">
+
+      </div>
+    </div>
   </div>
-  <h1>Bar Charts</h1>
-  <app-week-data [data]="data | async" ></app-week-data>
+  <!-- <h1>Bar Charts</h1>
+  <app-week-data [data]="data | async" ></app-week-data> -->
 </div>
