created bar chart for workout stats

--- a/src/app/my-dashboard/my-dashboard.component.html
+++ b/src/app/my-dashboard/my-dashboard.component.html
@@ -32,7 +32,8 @@
       <div>
         <div class="chart-div-left" id="left-bar-chart">
           <h1>Bar Charts</h1>
-          <app-week-data [data]="data | async"></app-week-data>
+          <app-workout-type-bar-chart></app-workout-type-bar-chart>
+          <!-- <app-week-data [data]="data | async"></app-week-data> -->
         </div>
         <div class="charrt-div-normal">
         </div>
