--- a/src/app/my-dashboard/my-dashboard.component.html
+++ b/src/app/my-dashboard/my-dashboard.component.html
@@ -19,7 +19,9 @@
             </mat-card-title>
           </mat-card-header>
           <mat-card-content class="dashboard-card-content">
-            <div>Card Content Here</div>
+            <div style="text-align: center">
+              <h5>{{card.content}}</h5>  
+            </div>
           </mat-card-content>
         </mat-card>
       </mat-grid-tile>
